--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,31 @@ body {
   margin-left: 8px;
 }
 
+.tags li {
+  line-height: 1;
+  display: inline;
+}
+
+.tags .tag-size-1 {
+  font-size: 10px;
+}
+
+.tags .tag-size-2 {
+  font-size: 20px;
+}
+
+.tags .tag-size-3 {
+  font-size: 30px;
+}
+
+.tags .tag-size-4 {
+  font-size: 40px;
+}
+
+.tags .tag-size-5 {
+  font-size: 50px;
+}
+
 .animated-example {
   margin: 20px auto;
   width: 300px;
