--- a/sass/style.scss
+++ b/sass/style.scss
@@ -147,6 +147,27 @@ body {
     margin-left: 8px;
   }
 }
+.tags {
+  li {
+    line-height: 1;
+    display: inline;
+  }
+  .tag-size-1 {
+    font-size: 10px;
+  }
+  .tag-size-2 {
+    font-size: 20px;
+  }
+  .tag-size-3 {
+    font-size: 30px;
+  }
+  .tag-size-4 {
+    font-size: 40px;
+  }
+  .tag-size-5 {
+    font-size: 50px;
+  }
+}
 .animated-example {
   margin: 20px auto;
   width: 300px;
